--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -13,8 +13,14 @@
             android:id="@+id/nav_photo"
             android:contentDescription="@string/menu_photo_content_description"
             android:icon="@drawable/ic_camera_alt"
-            android:nextFocusForward="@id/nav_asteroids"
+            android:nextFocusForward="@id/nav_earth_photo"
             android:title="@string/menu_photo" />
+        <item
+            android:id="@+id/nav_earth_photo"
+            android:contentDescription="@string/menu_earth_photo_content_description"
+            android:icon="@mipmap/ic_earth_foreground"
+            android:nextFocusForward="@id/nav_asteroids"
+            android:title="@string/menu_earth_photo" />
         <item
             android:id="@+id/nav_asteroids"
             android:contentDescription="@string/menu_asteroids_content_description"
@@ -25,14 +31,8 @@
             android:id="@+id/nav_observatories"
             android:contentDescription="@string/menu_observatories_content_description"
             android:icon="@drawable/ic_observatory"
-            android:nextFocusForward="@id/nav_earth_photo"
-            android:title="@string/menu_observatories" />
-        <item
-            android:id="@+id/nav_earth_photo"
-            android:contentDescription="@string/menu_earth_photo_content_description"
-            android:icon="@drawable/ic_camera_alt"
             android:nextFocusForward="@id/nav_theme"
-            android:title="@string/menu_earth_photo" />
+            android:title="@string/menu_observatories" />
     </group>
 
     <group
