--- a/app/src/main/res/layout/fragment_photo.xml
+++ b/app/src/main/res/layout/fragment_photo.xml
@@ -101,10 +101,10 @@
             <ProgressBar
                 android:id="@+id/photo_loading_indicator"
                 style="@style/LoadingIndicatorStyle"
-                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintBottom_toBottomOf="@id/photo_frame_layout"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="@id/photo_frame_layout" />
 
             <TextView
                 android:id="@+id/photo_title_text_view"
