--- a/app/src/main/res/layout/fragment_earth_photo.xml
+++ b/app/src/main/res/layout/fragment_earth_photo.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/earth_photo_coordinator_layout"
@@ -75,6 +76,14 @@
                     tools:listitem="@layout/image_thumbnail_grid_item" />
             </FrameLayout>
 
+            <ProgressBar
+                android:id="@+id/earth_loading_indicator"
+                style="@style/LoadingIndicatorStyle"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
             <ImageView
                 android:id="@+id/earth_photo_empty_image_view"
                 android:layout_width="wrap_content"
@@ -97,17 +106,4 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/earth_photo_fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_marginEnd="@dimen/margin"
-        android:layout_marginBottom="@dimen/margin"
-        android:backgroundTint="@color/colorAccent"
-        android:contentDescription="@string/share_content_description"
-        android:src="@drawable/ic_share"
-        app:fabSize="normal"
-        app:layout_anchorGravity="bottom|end" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
