--- a/app/src/main/res/layout/fragment_mars_photo.xml
+++ b/app/src/main/res/layout/fragment_mars_photo.xml
@@ -129,7 +129,8 @@
                 android:layout_marginTop="@dimen/margin"
                 android:id="@+id/mars_photo_camera_text_view"
                 style="@style/PhotoDescriptionTextView"
-                android:textAlignment="viewStart"
+                android:layout_gravity="center_horizontal"
+                android:gravity="center_horizontal"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/mars_photo_date_text_view"
