--- a/app/src/main/res/layout/fragment_asteroid.xml
+++ b/app/src/main/res/layout/fragment_asteroid.xml
@@ -36,6 +36,8 @@
         <TextView
             android:id="@+id/asteroid_empty_text_view"
             style="@style/EmptyTextViewStyle"
+            android:layout_gravity="center_horizontal"
+            android:gravity="center_horizontal"
             android:text="@string/no_asteroids_found"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
