Add an About item in the NavigationDrawer that leads to the author's website; create WebIntentUtils class with openWebsiteFromStringUrl method and implement it in the project

--- a/app/src/main/res/layout-v21/fragment_mars_photo.xml
+++ b/app/src/main/res/layout-v21/fragment_mars_photo.xml
@@ -99,7 +99,7 @@
 
             <TextView
                 android:id="@+id/mars_photo_rover_name"
-                style="@style/PhotoTitleTextView"
+                style="@style/TitleTextView"
                 android:layout_gravity="center_horizontal"
                 android:gravity="center_horizontal"
                 android:paddingStart="@dimen/margin_list_item"
