--- a/app/src/main/res/layout-v21/fragment_photo.xml
+++ b/app/src/main/res/layout-v21/fragment_photo.xml
@@ -108,7 +108,7 @@
 
             <TextView
                 android:id="@+id/photo_title_text_view"
-                style="@style/PhotoTitleTextView"
+                style="@style/TitleTextView"
                 android:layout_gravity="center_horizontal"
                 android:gravity="center_horizontal"
                 android:paddingStart="@dimen/margin_list_item"
