--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -34,7 +34,7 @@
     </style>
 
     <!-- Style of the photo title TextView -->
-    <style name="PhotoTitleTextView">
+    <style name="TitleTextView">
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_margin">@dimen/margin</item>
