feat: remove Mars photos from the NavigationDrawer, since the images are not currently available; replace some deprecated functions

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -19,15 +19,15 @@
             android:id="@+id/nav_earth_photo"
             android:contentDescription="@string/menu_earth_photo_content_description"
             android:icon="@mipmap/ic_earth_foreground"
-            android:nextFocusForward="@id/nav_mars_photo"
+            android:nextFocusForward="@id/nav_asteroids"
             android:title="@string/menu_earth_photo" />
 
-        <item
-            android:id="@+id/nav_mars_photo"
-            android:contentDescription="@string/menu_mars_photo_content_description"
-            android:icon="@mipmap/ic_earth_foreground"
-            android:nextFocusForward="@id/nav_asteroids"
-            android:title="@string/menu_mars_photo" />
+<!--        <item-->
+<!--            android:id="@+id/nav_mars_photo"-->
+<!--            android:contentDescription="@string/menu_mars_photo_content_description"-->
+<!--            android:icon="@mipmap/ic_earth_foreground"-->
+<!--            android:nextFocusForward="@id/nav_asteroids"-->
+<!--            android:title="@string/menu_mars_photo" />-->
 
         <item
             android:id="@+id/nav_asteroids"
